# TorQ-bench

./: .gitignore  LICENSE  README.md  pyproject.toml
src/TorQ_bench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/torq-bench/: PennyLaneComparison.py  pennylane_backend.py
src/torq_bench/: PennyLaneComparison.py  __init__.py  pennylane_backend.py
tests/: test_public_api.py  test_release_packaging.py
