[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TorQ-bench"
version = "0.1.0"
description = "Tensor Operations for Research in Quantum systems - Benchmarking."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torq>=0.1.0",
]
license = "MIT"

[project.optional-dependencies]
pennylane = ["pennylane>=0.31"]
dev = [
  "pytest",
  "ruff",
  "mypy"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
